# neuron-group

./: QA_TEST_CASES.md  README.md  pyproject.toml
src/promruleguard/: __main__.py  checks.py  cli.py  loader.py  models.py  reporting.py
tests/: test_checks.py  test_cli.py  test_e2e.py
tests/fixtures/: sample_rules.yaml
