[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promruleguard"
version = "0.1.0"
description = "CLI lint tool for Prometheus alerting rule quality checks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
promruleguard = "promruleguard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
